group 'michael'
version '1.0-SNAPSHOT'


apply plugin: 'java'
apply plugin: 'jacoco'

apply plugin: 'sonar-runner'

sonarRunner {
    sonarProperties {
        property "sonar.host.url", "http://localhost:9000"
        property "sonar.jdbc.url", "jdbc:h2:tcp://localhost:9092/sonar"
        property "sonar.jdbc.driverClassName", "org.h2.Driver"
        property "sonar.username", "sonar"
        property "sonar.password", "sonar"
        property "sonar.projectName", "hpepoc"
        property "sonar.jacoco.reportPath", "build/jacoco/jacocoTest.exec"
        property "sonar.java.source property", "1.7"
 //       property "sonar.junit.reportsPath", "$buildDir/test-results"
 //       property "sonar.branch", "testContent"
    }
}

jacoco {
    reportsDir = file("$buildDir/jacoco/jacocoTest.exec")
}


sourceCompatibility = 1.7

repositories {
    mavenCentral()
}

dependencies {
//    testCompile group: 'junit', name: 'junit', version: '4.11'

    testRuntime 'org.codehaus.sonar-plugins.java:sonar-jacoco-listeners:1.3'

    compile group: 'org.testng', name: 'testng', version: '6.9.10'

    compile 'org.slf4j:slf4j-api:1.7.12'

    compile 'org.slf4j:slf4j-log4j12:1.7.12'
    compile 'log4j:log4j:1.2.17'


    compile 'org.eclipse.jetty:jetty-server:9.2.5.v20141112'
    compile 'org.eclipse.jetty:jetty-servlet:9.2.5.v20141112'

    compile 'org.json:json:20141113'
    compile 'commons-io:commons-io:2.4'
}


test {

    useTestNG()

    reports.html.destination = file("$buildDir/reports/test")

    ignoreFailures = true

    // show standard out and standard error of the test JVM(s) on the console
    testLogging.showStandardStreams = true

    minHeapSize = "128m"
    maxHeapSize = "512m"

    jvmArgs '-XX:MaxPermSize=256m'

    // listen to events in the test execution lifecycle
    beforeTest { descriptor ->
        logger.lifecycle("Running test: " + descriptor)
    }

    // listen to standard out and standard error of the test JVM(s)
//    onOutput { descriptor, event ->
//        logger.lifecycle("Test: " + descriptor + " produced standard out/err: " + event.message )
//    }

    options {
        listeners << 'org.sonar.java.jacoco.TestNGListener'
    }

    jacoco {
        destinationFile = file("$buildDir/jacoco/jacocoTest.exec")
    }
}

task executeDetector(type:JavaExec) {
    main = "utils.ChangeDetector"
    classpath = sourceSets.main.runtimeClasspath
}